--- a/examples/nodejs/BUILD
+++ b/examples/nodejs/BUILD
@@ -8,34 +8,25 @@ load("//base:distro.bzl", "DISTRO_SUFFIXES")
 
 # These examples are adapted from:
 # https://howtonode.org/hello-node
-[
-    container_image(
-        name = "hello" + distro_suffix,
-        base = "//experimental/nodejs:nodejs14" + distro_suffix,
-        cmd = ["hello.js"],
-        files = [":hello.js"],
-    )
-    for distro_suffix in DISTRO_SUFFIXES
-]
+[container_image(
+    name = "hello" + distro_suffix,
+    base = "//experimental/nodejs:nodejs14" + distro_suffix,
+    cmd = ["hello.js"],
+    files = [":hello.js"],
+) for distro_suffix in DISTRO_SUFFIXES]
 
-[
-    container_image(
-        name = "hello_http" + distro_suffix,
-        base = "//experimental/nodejs:nodejs14" + distro_suffix,
-        cmd = ["hello_http.js"],
-        files = [":hello_http.js"],
-        ports = ["8000"],
-    )
-    for distro_suffix in DISTRO_SUFFIXES
-]
+[container_image(
+    name = "hello_http" + distro_suffix,
+    base = "//experimental/nodejs:nodejs14" + distro_suffix,
+    cmd = ["hello_http.js"],
+    files = [":hello_http.js"],
+    ports = ["8000"],
+) for distro_suffix in DISTRO_SUFFIXES]
 
 load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
 
-[
-    container_test(
-        name = "hello_test" + distro_suffix,
-        configs = ["testdata/hello.yaml"],
-        image = ":hello" + distro_suffix,
-    )
-    for distro_suffix in DISTRO_SUFFIXES
-]
+[container_test(
+    name = "hello" + distro_suffix + "_test",
+    configs = ["testdata/hello.yaml"],
+    image = ":hello" + distro_suffix,
+) for distro_suffix in DISTRO_SUFFIXES]
