adding debian 10 build to node js (#573)
* adding debian 10 build to node js

* load distro suffixes from distro.bzl

* adds new build target for nodejs, defaulting to debian9

* just testing something

* retry

* adds latest tags for nodejs builds

* adds new node js build to cloudbuild

* point latest and debug tags to node 14

* Update BUILD

Co-authored-by: Chanseok Oh <chanseok@google.com>

* fix node version for default debian9 debug image

Co-authored-by: Chanseok Oh <chanseok@google.com>

* remove empty line in nodejs build

* Update cloudbuild.yaml formatting

Co-authored-by: Chanseok Oh <chanseok@google.com>

* adds distro suffixes for nodejs example images

* Update examples/nodejs/BUILD

Co-authored-by: Chanseok Oh <chanseok@google.com>

* Update examples/nodejs/BUILD

Co-authored-by: Chanseok Oh <chanseok@google.com>

* Fix rule suffix

* Fix rule suffix

* Fix tests

* Remove executable bits from BUILD

* consistency in examples

Co-authored-by: Chanseok Oh <chanseok@google.com>

--- a/examples/nodejs/BUILD
+++ b/examples/nodejs/BUILD
@@ -4,28 +4,29 @@
 package(default_visibility = ["//visibility:public"])
 
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
+load("//base:distro.bzl", "DISTRO_SUFFIXES")
 
 # These examples are adapted from:
 # https://howtonode.org/hello-node
-container_image(
-    name = "hello",
-    base = "//experimental/nodejs:nodejs10",
+[container_image(
+    name = "hello" + distro_suffix,
+    base = "//experimental/nodejs:nodejs14" + distro_suffix,
     cmd = ["hello.js"],
     files = [":hello.js"],
-)
+) for distro_suffix in DISTRO_SUFFIXES]
 
-container_image(
-    name = "hello_http",
-    base = "//experimental/nodejs:nodejs10",
+[container_image(
+    name = "hello_http" + distro_suffix,
+    base = "//experimental/nodejs:nodejs14" + distro_suffix,
     cmd = ["hello_http.js"],
     files = [":hello_http.js"],
     ports = ["8000"],
-)
+) for distro_suffix in DISTRO_SUFFIXES]
 
 load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
 
-container_test(
-    name = "hello_test",
+[container_test(
+    name = "hello" + distro_suffix + "_test",
     configs = ["testdata/hello.yaml"],
-    image = ":hello",
-)
+    image = ":hello" + distro_suffix,
+) for distro_suffix in DISTRO_SUFFIXES]
