--- a/experimental/nodejs/BUILD
+++ b/experimental/nodejs/BUILD
@@ -1,13 +1,14 @@
 package(default_visibility = ["//visibility:public"])
 
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
+load("//base:distro.bzl", "DISTRO_SUFFIXES")
 
 NODEJS_MAJOR_VERISONS = ("10", "12", "14")
 
 [
     container_image(
-        name = "nodejs" + major_version + ("" if (not mode) else mode),
-        base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug"),
+        name = "nodejs" + major_version + ("" if (not mode) else mode) + distro_suffix,
+        base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug") + distro_suffix,
         entrypoint = ["/nodejs/bin/node"],
         tars = ["@nodejs" + major_version + "//:tar"],
     )
@@ -16,4 +17,5 @@ NODEJS_MAJOR_VERISONS = ("10", "12", "14")
         "_debug",
     ]
     for major_version in NODEJS_MAJOR_VERISONS
+    for distro_suffix in DISTRO_SUFFIXES
 ]
