--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -135,18 +135,18 @@ steps:
     #!/bin/sh
     set -o errexit
     set -o xtrace
-    bazel run //experimental/nodejs:nodejs10_debian9
-    bazel run //experimental/nodejs:nodejs10_debug_debian9
-    bazel run //experimental/nodejs:nodejs10_debian10
-    bazel run //experimental/nodejs:nodejs10_debug_debian10
-    bazel run //experimental/nodejs:nodejs12_debian9
-    bazel run //experimental/nodejs:nodejs12_debug_debian9
-    bazel run //experimental/nodejs:nodejs12_debian10
-    bazel run //experimental/nodejs:nodejs12_debug_debian10
-    bazel run //experimental/nodejs:nodejs14_debian9
-    bazel run //experimental/nodejs:nodejs14_debug_debian9
-    bazel run //experimental/nodejs:nodejs14_debian10
-    bazel run //experimental/nodejs:nodejs14_debug_debian10
+    bazel run //nodejs:nodejs10_debian9
+    bazel run //nodejs:nodejs10_debug_debian9
+    bazel run //nodejs:nodejs10_debian10
+    bazel run //nodejs:nodejs10_debug_debian10
+    bazel run //nodejs:nodejs12_debian9
+    bazel run //nodejs:nodejs12_debug_debian9
+    bazel run //nodejs:nodejs12_debian10
+    bazel run //nodejs:nodejs12_debug_debian10
+    bazel run //nodejs:nodejs14_debian9
+    bazel run //nodejs:nodejs14_debug_debian9
+    bazel run //nodejs:nodejs14_debian10
+    bazel run //nodejs:nodejs14_debug_debian10
 - name: gcr.io/cloud-builders/docker
   entrypoint: sh
   args:
@@ -155,30 +155,30 @@ steps:
     #!/bin/sh
     set -o errexit
     set -o xtrace
-    docker tag bazel/experimental/nodejs:nodejs14_debian9        gcr.io/$PROJECT_ID/nodejs:latest
-    docker tag bazel/experimental/nodejs:nodejs10_debian9        gcr.io/$PROJECT_ID/nodejs:10
-    docker tag bazel/experimental/nodejs:nodejs12_debian9        gcr.io/$PROJECT_ID/nodejs:12
-    docker tag bazel/experimental/nodejs:nodejs14_debian9        gcr.io/$PROJECT_ID/nodejs:14
-    docker tag bazel/experimental/nodejs:nodejs14_debug_debian9  gcr.io/$PROJECT_ID/nodejs:debug
-    docker tag bazel/experimental/nodejs:nodejs10_debug_debian9  gcr.io/$PROJECT_ID/nodejs:10-debug
-    docker tag bazel/experimental/nodejs:nodejs12_debug_debian9  gcr.io/$PROJECT_ID/nodejs:12-debug
-    docker tag bazel/experimental/nodejs:nodejs14_debug_debian9  gcr.io/$PROJECT_ID/nodejs:14-debug
-    docker tag bazel/experimental/nodejs:nodejs14_debian9        gcr.io/$PROJECT_ID/nodejs-debian9:latest
-    docker tag bazel/experimental/nodejs:nodejs10_debian9        gcr.io/$PROJECT_ID/nodejs-debian9:10
-    docker tag bazel/experimental/nodejs:nodejs12_debian9        gcr.io/$PROJECT_ID/nodejs-debian9:12
-    docker tag bazel/experimental/nodejs:nodejs14_debian9        gcr.io/$PROJECT_ID/nodejs-debian9:14
-    docker tag bazel/experimental/nodejs:nodejs14_debug_debian9  gcr.io/$PROJECT_ID/nodejs-debian9:debug
-    docker tag bazel/experimental/nodejs:nodejs10_debug_debian9  gcr.io/$PROJECT_ID/nodejs-debian9:10-debug
-    docker tag bazel/experimental/nodejs:nodejs12_debug_debian9  gcr.io/$PROJECT_ID/nodejs-debian9:12-debug
-    docker tag bazel/experimental/nodejs:nodejs14_debug_debian9  gcr.io/$PROJECT_ID/nodejs-debian9:14-debug
-    docker tag bazel/experimental/nodejs:nodejs14_debian10       gcr.io/$PROJECT_ID/nodejs-debian10:latest
-    docker tag bazel/experimental/nodejs:nodejs10_debian10       gcr.io/$PROJECT_ID/nodejs-debian10:10
-    docker tag bazel/experimental/nodejs:nodejs12_debian10       gcr.io/$PROJECT_ID/nodejs-debian10:12
-    docker tag bazel/experimental/nodejs:nodejs14_debian10       gcr.io/$PROJECT_ID/nodejs-debian10:14
-    docker tag bazel/experimental/nodejs:nodejs14_debug_debian10 gcr.io/$PROJECT_ID/nodejs-debian10:debug
-    docker tag bazel/experimental/nodejs:nodejs10_debug_debian10 gcr.io/$PROJECT_ID/nodejs-debian10:10-debug
-    docker tag bazel/experimental/nodejs:nodejs12_debug_debian10 gcr.io/$PROJECT_ID/nodejs-debian10:12-debug
-    docker tag bazel/experimental/nodejs:nodejs14_debug_debian10 gcr.io/$PROJECT_ID/nodejs-debian10:14-debug
+    docker tag bazel/nodejs:nodejs14_debian9        gcr.io/$PROJECT_ID/nodejs:latest
+    docker tag bazel/nodejs:nodejs10_debian9        gcr.io/$PROJECT_ID/nodejs:10
+    docker tag bazel/nodejs:nodejs12_debian9        gcr.io/$PROJECT_ID/nodejs:12
+    docker tag bazel/nodejs:nodejs14_debian9        gcr.io/$PROJECT_ID/nodejs:14
+    docker tag bazel/nodejs:nodejs14_debug_debian9  gcr.io/$PROJECT_ID/nodejs:debug
+    docker tag bazel/nodejs:nodejs10_debug_debian9  gcr.io/$PROJECT_ID/nodejs:10-debug
+    docker tag bazel/nodejs:nodejs12_debug_debian9  gcr.io/$PROJECT_ID/nodejs:12-debug
+    docker tag bazel/nodejs:nodejs14_debug_debian9  gcr.io/$PROJECT_ID/nodejs:14-debug
+    docker tag bazel/nodejs:nodejs14_debian9        gcr.io/$PROJECT_ID/nodejs-debian9:latest
+    docker tag bazel/nodejs:nodejs10_debian9        gcr.io/$PROJECT_ID/nodejs-debian9:10
+    docker tag bazel/nodejs:nodejs12_debian9        gcr.io/$PROJECT_ID/nodejs-debian9:12
+    docker tag bazel/nodejs:nodejs14_debian9        gcr.io/$PROJECT_ID/nodejs-debian9:14
+    docker tag bazel/nodejs:nodejs14_debug_debian9  gcr.io/$PROJECT_ID/nodejs-debian9:debug
+    docker tag bazel/nodejs:nodejs10_debug_debian9  gcr.io/$PROJECT_ID/nodejs-debian9:10-debug
+    docker tag bazel/nodejs:nodejs12_debug_debian9  gcr.io/$PROJECT_ID/nodejs-debian9:12-debug
+    docker tag bazel/nodejs:nodejs14_debug_debian9  gcr.io/$PROJECT_ID/nodejs-debian9:14-debug
+    docker tag bazel/nodejs:nodejs14_debian10       gcr.io/$PROJECT_ID/nodejs-debian10:latest
+    docker tag bazel/nodejs:nodejs10_debian10       gcr.io/$PROJECT_ID/nodejs-debian10:10
+    docker tag bazel/nodejs:nodejs12_debian10       gcr.io/$PROJECT_ID/nodejs-debian10:12
+    docker tag bazel/nodejs:nodejs14_debian10       gcr.io/$PROJECT_ID/nodejs-debian10:14
+    docker tag bazel/nodejs:nodejs14_debug_debian10 gcr.io/$PROJECT_ID/nodejs-debian10:debug
+    docker tag bazel/nodejs:nodejs10_debug_debian10 gcr.io/$PROJECT_ID/nodejs-debian10:10-debug
+    docker tag bazel/nodejs:nodejs12_debug_debian10 gcr.io/$PROJECT_ID/nodejs-debian10:12-debug
+    docker tag bazel/nodejs:nodejs14_debug_debian10 gcr.io/$PROJECT_ID/nodejs-debian10:14-debug
 - name: gcr.io/cloud-marketplace-containers/google/bazel:3.2.0
   entrypoint: sh
   args:
