Normalize rule naming across versions

--- a/base/BUILD
+++ b/base/BUILD
@@ -101,8 +101,8 @@ pkg_tar(
     package_dir = "etc",
 )
 
-load("@package_bundle//file:packages.bzl", "packages")
-load("@package_bundle_debian10//file:packages.bzl", packages_debian10 = "packages")
+load("@package_bundle_amd64_debian9//file:packages.bzl", "packages")
+load("@package_bundle_amd64_debian10//file:packages.bzl", packages_debian10 = "packages")
 load("//cacerts:cacerts.bzl", "cacerts")
 
 go_binary(
