Normalize the aliases as well

--- a/experimental/dotnet/BUILD
+++ b/experimental/dotnet/BUILD
@@ -1,14 +1,14 @@
 package(default_visibility = ["//visibility:public"])
 
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
-load("@package_bundle_amd64_debian9//file:packages.bzl", "packages")
-load("@package_bundle_amd64_debian10//file:packages.bzl", packages_debian10 = "packages")
+load("@package_bundle_amd64_debian9//file:packages.bzl", packages_amd64_debian9 = "packages")
+load("@package_bundle_amd64_debian10//file:packages.bzl", packages_amd64_debian10 = "packages")
 
 DISTRO_SUFFIXES = ("_debian9", "_debian10")
 
 DISTRO_PACKAGES = {
-    "_debian9": packages,
-    "_debian10": packages_debian10,
+    "_debian9": packages_amd64_debian9,
+    "_debian10": packages_amd64_debian10,
 }
 
 DOTNET_VARIANTS = ("", "_core_aspnet", "_core_runtime", "_core_sdk")
