--- a/examples/rust/BUILD
+++ b/examples/rust/BUILD
@@ -11,5 +11,5 @@ load("@io_bazel_rules_docker//rust:image.bzl", "rust_image")
 rust_image(
     name = "rust_example",
     srcs = ["src/main.rs"],
-    base = "//cc:cc",
+    base = "//cc:cc_debian10",
 )
