--- a/cacerts/BUILD
+++ b/cacerts/BUILD
@@ -1,15 +1,15 @@
 package(default_visibility = ["//:__subpackages__"])
 
 load("//base:distro.bzl", "DISTRO_SUFFIXES")
+load("//:checksums.bzl", "ARCHITECTURES")
 load(":cacerts.bzl", "cacerts")
 load(":java.bzl", "cacerts_java")
 
-[alias(
-    name = "cacerts" + distro_suffix,
-    actual = "//base:cacerts" + distro_suffix,
-) for distro_suffix in DISTRO_SUFFIXES]
-
-[cacerts_java(
-    name = "cacerts_java" + distro_suffix,
-    cacerts_tar = ":cacerts" + distro_suffix,
-) for distro_suffix in DISTRO_SUFFIXES]
+[
+    cacerts_java(
+        name = "cacerts_java_" + arch + distro_suffix,
+        cacerts_tar = "//base:cacerts_" + arch + distro_suffix,
+    )
+    for arch in ARCHITECTURES
+    for distro_suffix in DISTRO_SUFFIXES
+]
