--- a/examples/dotnet/BUILD
+++ b/examples/dotnet/BUILD
@@ -14,7 +14,7 @@ load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
         "/bin/Release/netcoreapp2.0/hello.dll",
     ],
     files = [":bin"],
-) for suffix in ("", "_core_aspnet_debian10", "_core_runtime_debian10", "_core_sdk_debian10")]
+) for suffix in ("_debian10", "_core_aspnet_debian10", "_core_runtime_debian10", "_core_sdk_debian10")]
 
 load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
 
@@ -23,4 +23,4 @@ load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
     size = "small",
     configs = ["testdata/hello" + suffix + ".yaml"],
     image = ":hello" + suffix,
-) for suffix in ("", "_core_aspnet_debian10", "_core_runtime_debian10", "_core_sdk_debian10")]
+) for suffix in ("_debian10", "_core_aspnet_debian10", "_core_runtime_debian10", "_core_sdk_debian10")]
