--- a/experimental/busybox/BUILD
+++ b/experimental/busybox/BUILD
@@ -1,17 +1,17 @@
 package(default_visibility = ["//base:__subpackages__"])
 
-load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
+load("//:checksums.bzl", "ARCHITECTURES")
 load(":commands.bzl", "BUSYBOX_COMMANDS")
 
-# For convenience, rename busybox-x86_64 to busybox.
-genrule(
-    name = "busybox_tar",
-    srcs = ["@busybox//file"],
-    outs = ["busybox.tar"],
+# This works for all architectures because it is just files.
+[genrule(
+    name = "busybox_" + arch + "_tar",
+    srcs = ["@busybox_" + arch + "//file"],
+    outs = ["busybox_" + arch + ".tar"],
     cmd = "mkdir busybox; cp $(<) busybox/busybox; cd busybox; \
            for cmd in %s; do \
              ln -s busybox $$cmd; \
            done; \
            cd ..; \
            tar -cf $@ busybox" % " ".join(BUSYBOX_COMMANDS),
-)
+) for arch in ARCHITECTURES]
