--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -27,14 +27,22 @@ steps:
     bazel run --host_force_python=PY2 //base:static_nonroot_arm64_debian9
     bazel run --host_force_python=PY2 //base:static_nonroot_arm64_debian10
 
-    bazel run --host_force_python=PY2 //base:base_debian9
-    bazel run --host_force_python=PY2 //base:base_debian10
-    bazel run --host_force_python=PY2 //base:base_nonroot_debian9
-    bazel run --host_force_python=PY2 //base:base_nonroot_debian10
-    bazel run --host_force_python=PY2 //base:debug_debian9
-    bazel run --host_force_python=PY2 //base:debug_debian10
-    bazel run --host_force_python=PY2 //base:debug_nonroot_debian9
-    bazel run --host_force_python=PY2 //base:debug_nonroot_debian10
+    bazel run --host_force_python=PY2 //base:base_root_amd64_debian9
+    bazel run --host_force_python=PY2 //base:base_root_amd64_debian10
+    bazel run --host_force_python=PY2 //base:base_nonroot_amd64_debian9
+    bazel run --host_force_python=PY2 //base:base_nonroot_amd64_debian10
+    bazel run --host_force_python=PY2 //base:debug_root_amd64_debian9
+    bazel run --host_force_python=PY2 //base:debug_root_amd64_debian10
+    bazel run --host_force_python=PY2 //base:debug_nonroot_amd64_debian9
+    bazel run --host_force_python=PY2 //base:debug_nonroot_amd64_debian10
+    bazel run --host_force_python=PY2 //base:base_root_arm64_debian9
+    bazel run --host_force_python=PY2 //base:base_root_arm64_debian10
+    bazel run --host_force_python=PY2 //base:base_nonroot_arm64_debian9
+    bazel run --host_force_python=PY2 //base:base_nonroot_arm64_debian10
+    bazel run --host_force_python=PY2 //base:debug_root_arm64_debian9
+    bazel run --host_force_python=PY2 //base:debug_root_arm64_debian10
+    bazel run --host_force_python=PY2 //base:debug_nonroot_arm64_debian9
+    bazel run --host_force_python=PY2 //base:debug_nonroot_arm64_debian10
 
     bazel run --host_force_python=PY2 //cc:cc_debian9
     bazel run --host_force_python=PY2 //cc:cc_debian10
@@ -62,21 +70,26 @@ steps:
     docker tag bazel/base:static_root_arm64_debian9     gcr.io/$PROJECT_ID/static:latest-arm64
     docker tag bazel/base:static_nonroot_arm64_debian9  gcr.io/$PROJECT_ID/static:nonroot-arm64
 
-    docker tag bazel/base:base_debian9            gcr.io/$PROJECT_ID/base:${COMMIT_SHA}
-    docker tag bazel/base:base_debian9            gcr.io/$PROJECT_ID/base:latest
-    docker tag bazel/base:base_debian9            gcr.io/$PROJECT_ID/base-debian9:${COMMIT_SHA}
-    docker tag bazel/base:base_debian9            gcr.io/$PROJECT_ID/base-debian9:latest
-    docker tag bazel/base:base_debian10           gcr.io/$PROJECT_ID/base-debian10:${COMMIT_SHA}
-    docker tag bazel/base:base_debian10           gcr.io/$PROJECT_ID/base-debian10:latest
-    docker tag bazel/base:base_nonroot_debian9    gcr.io/$PROJECT_ID/base:nonroot
-    docker tag bazel/base:base_nonroot_debian9    gcr.io/$PROJECT_ID/base-debian9:nonroot
-    docker tag bazel/base:base_nonroot_debian10   gcr.io/$PROJECT_ID/base-debian10:nonroot
-    docker tag bazel/base:debug_debian9           gcr.io/$PROJECT_ID/base:debug
-    docker tag bazel/base:debug_debian9           gcr.io/$PROJECT_ID/base-debian9:debug
-    docker tag bazel/base:debug_debian10          gcr.io/$PROJECT_ID/base-debian10:debug
-    docker tag bazel/base:debug_nonroot_debian9   gcr.io/$PROJECT_ID/base:debug-nonroot
-    docker tag bazel/base:debug_nonroot_debian9   gcr.io/$PROJECT_ID/base-debian9:debug-nonroot
-    docker tag bazel/base:debug_nonroot_debian10  gcr.io/$PROJECT_ID/base-debian10:debug-nonroot
+    docker tag bazel/base:base_root_amd64_debian9        gcr.io/$PROJECT_ID/base:${COMMIT_SHA}
+    docker tag bazel/base:base_root_amd64_debian9        gcr.io/$PROJECT_ID/base:latest-amd64
+    docker tag bazel/base:base_root_amd64_debian9        gcr.io/$PROJECT_ID/base-debian9:${COMMIT_SHA}
+    docker tag bazel/base:base_root_amd64_debian9        gcr.io/$PROJECT_ID/base-debian9:latest
+    docker tag bazel/base:base_root_amd64_debian10       gcr.io/$PROJECT_ID/base-debian10:${COMMIT_SHA}
+    docker tag bazel/base:base_root_amd64_debian10       gcr.io/$PROJECT_ID/base-debian10:latest
+    docker tag bazel/base:base_nonroot_amd64_debian9     gcr.io/$PROJECT_ID/base:nonroot-amd64
+    docker tag bazel/base:base_nonroot_amd64_debian9     gcr.io/$PROJECT_ID/base-debian9:nonroot
+    docker tag bazel/base:base_nonroot_amd64_debian10    gcr.io/$PROJECT_ID/base-debian10:nonroot
+    docker tag bazel/base:debug_root_amd64_debian9       gcr.io/$PROJECT_ID/base:debug-amd64
+    docker tag bazel/base:debug_root_amd64_debian9       gcr.io/$PROJECT_ID/base-debian9:debug
+    docker tag bazel/base:debug_root_amd64_debian10      gcr.io/$PROJECT_ID/base-debian10:debug
+    docker tag bazel/base:debug_nonroot_amd64_debian9    gcr.io/$PROJECT_ID/base:debug-nonroot-amd64
+    docker tag bazel/base:debug_nonroot_amd64_debian9    gcr.io/$PROJECT_ID/base-debian9:debug-nonroot
+    docker tag bazel/base:debug_nonroot_amd64_debian10   gcr.io/$PROJECT_ID/base-debian10:debug-nonroot
+
+    docker tag bazel/base:base_root_arm64_debian9        gcr.io/$PROJECT_ID/base:latest-arm64
+    docker tag bazel/base:base_root_arm64_debian9        gcr.io/$PROJECT_ID/base:nonroot-arm64
+    docker tag bazel/base:debug_root_arm64_debian9       gcr.io/$PROJECT_ID/base:debug-arm64
+    docker tag bazel/base:debug_root_arm64_debian9       gcr.io/$PROJECT_ID/base:debug-nonroot-arm64
 
     docker tag bazel/cc:cc_debian9     gcr.io/$PROJECT_ID/cc:${COMMIT_SHA}
     docker tag bazel/cc:cc_debian9     gcr.io/$PROJECT_ID/cc:latest
@@ -256,10 +269,14 @@ steps:
     docker push 'gcr.io/$PROJECT_ID/static-debian10:latest'
     docker push 'gcr.io/$PROJECT_ID/static-debian10:nonroot'
     docker push 'gcr.io/$PROJECT_ID/base:${COMMIT_SHA}'
-    docker push 'gcr.io/$PROJECT_ID/base:latest'
-    docker push 'gcr.io/$PROJECT_ID/base:nonroot'
-    docker push 'gcr.io/$PROJECT_ID/base:debug'
-    docker push 'gcr.io/$PROJECT_ID/base:debug-nonroot'
+    docker push 'gcr.io/$PROJECT_ID/base:latest-amd64'
+    docker push 'gcr.io/$PROJECT_ID/base:nonroot-amd64'
+    docker push 'gcr.io/$PROJECT_ID/base:debug-amd64'
+    docker push 'gcr.io/$PROJECT_ID/base:debug-nonroot-amd64'
+    docker push 'gcr.io/$PROJECT_ID/base:latest-arm64'
+    docker push 'gcr.io/$PROJECT_ID/base:nonroot-arm64'
+    docker push 'gcr.io/$PROJECT_ID/base:debug-arm64'
+    docker push 'gcr.io/$PROJECT_ID/base:debug-nonroot-arm64'
     docker push 'gcr.io/$PROJECT_ID/base-debian9:${COMMIT_SHA}'
     docker push 'gcr.io/$PROJECT_ID/base-debian9:latest'
     docker push 'gcr.io/$PROJECT_ID/base-debian9:nonroot'
@@ -375,3 +392,23 @@ steps:
        gcr.io/$PROJECT_ID/static:latest-amd64 \
        gcr.io/$PROJECT_ID/static:latest-arm64
     docker manifest push gcr.io/$PROJECT_ID/static:latest
+
+    docker manifest create gcr.io/$PROJECT_ID/base:nonroot \
+       gcr.io/$PROJECT_ID/base:nonroot-amd64 \
+       gcr.io/$PROJECT_ID/base:nonroot-arm64
+    docker manifest push gcr.io/$PROJECT_ID/base:nonroot
+
+    docker manifest create gcr.io/$PROJECT_ID/base:latest \
+       gcr.io/$PROJECT_ID/base:latest-amd64 \
+       gcr.io/$PROJECT_ID/base:latest-arm64
+    docker manifest push gcr.io/$PROJECT_ID/base:latest
+
+    docker manifest create gcr.io/$PROJECT_ID/base:debug-nonroot \
+       gcr.io/$PROJECT_ID/base:debug-nonroot-amd64 \
+       gcr.io/$PROJECT_ID/base:debug-nonroot-arm64
+    docker manifest push gcr.io/$PROJECT_ID/base:debug-nonroot
+
+    docker manifest create gcr.io/$PROJECT_ID/base:debug \
+       gcr.io/$PROJECT_ID/base:debug-amd64 \
+       gcr.io/$PROJECT_ID/base:debug-arm64
+    docker manifest push gcr.io/$PROJECT_ID/base:debug
