Add a pylint github action

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,13 @@ install:
   - export PATH=$PATH:$HOME/bin && mkdir -p $HOME/bin
   # install bazelisk as bazel to install the appropriate bazel version
   - wget https://github.com/bazelbuild/bazelisk/releases/download/v1.5.0/bazelisk-linux-amd64 && chmod +x bazelisk-linux-amd64 && mv bazelisk-linux-amd64 $HOME/bin/bazel
-  - sudo pip install pylint
 
 script:
-  - ./test.sh
+  - |
+    bazel clean --curses=no
+    bazel build --curses=no //package_manager:dpkg_parser.par
+    bazel build --curses=no //...
+    bazel test --curses=no --test_output=errors --test_timeout=900 //...
 
 notifications:
   email: false
